#39 新增webbrowser plugins 1、调整新开网页默认界面

--- a/tool/web_browser_plugins/newtab.html
+++ b/tool/web_browser_plugins/newtab.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="newtab.css">
-    </head>
-    <body>
-        <h1>daily</h1>
-        <a href="https://leetcode-cn.com/u/xiao-bao-8/">leetcode</a>
-        <a href="https://xiewendan.github.io/">blog</a>
-        <a href="http://www.keybr.com/practice">typing</a>
-        <a href="https://www.infoq.cn/weekly/landing">InfoQ</a>
-        <a href="https://trello.com/login?returnUrl=%2Fb%2FbyPJ2QFV%2F%25E6%259C%25AA%25E5%2591%25BD%25E5%2590%258D%25E7%259C%258B%25E6%259D%25BF">Trello</a>
-        <a href="https://note.youdao.com/web/#/file/06FF66E537E1447692E30F1C9B8CEFF9/note/38CACC8AF1624475829AF14E20D6D15E/">youdao note</a>
-        <br>
-        <h1>netease</h1>
-        <a href="http://10.225.93.110:5001/">remote open</a>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *;script-src * 'unsafe-inline'">
+    <link rel="stylesheet" type="text/css" href="newtab.css">
+</head>
+
+<body>
+
+    <script type="text/javascript" src="newtab.js">
+    </script>
+
+</body>
+
 </html>
